--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       // import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
 
-			import './three.module.js';  // ファイルパスを正確に指定する
+			import THREE from './three.module.js';  // ファイルパスを正確に指定する
 
 			// GLTFファイル使用用
 			import { GLTFLoader } from './GLTFLoader.js';
