--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "./three.module.js'"
+					"three": "https://unpkg.com/three/build/three.module.js"
 				}
 			}
 		</script>
@@ -54,6 +54,7 @@
 			// importmapと一緒に使用し、three.module.jsをimportするため
 			import * as THREE from 'three';
 
+			
 
 
       // import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
