--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 		<script type="module">
 
 			// importmapと一緒に使用し、three.module.jsをimportするため
-			import * as THREE from 'three';
+			import * as THREE from "https://unpkg.com/three/build/three.module.js";
 
-			
+
 
 
       // import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
