--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
 
 			// importmapと一緒に使用し、three.module.jsをimportするため
 			// import * as THREE from 'three';
+			// 上記と同じ内容
+			// import * as THREE from "https://unpkg.com/three/build/three.module.js";
+			
 
 			
 
 
-      import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
+      import * as THREE from './three_module.js';  // ファイルパスを正確に指定する
 
 			// GLTFファイル使用用
 			import { GLTFLoader } from './GLTFLoader.js';
