--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 
 
-      import * as THREE from './three_module.js';  // ファイルパスを正確に指定する
+      import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
 
 			// GLTFファイル使用用
 			import { GLTFLoader } from './GLTFLoader.js';
