--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
 			// import * as THREE from "https://unpkg.com/three/build/three.module.js";
 			
 
+
 			
 
 
-      import * as THREE from './three.module.js';  // ファイルパスを正確に指定する
+      import { THREE }  from './three.module.js';  // ファイルパスを正確に指定する
 
 			// GLTFファイル使用用
 			import { GLTFLoader } from './GLTFLoader.js';
