--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
 				// }
 
 
+				
 
+				let currentModel = null; // currentModel 変数を定義
 
 				// 新しく3Dモデルを表示する際、表示済みの3Dモデルを消す
 				function loadModel() {
