--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				// }
 
 
-				
+
 
 				let currentModel = null; // currentModel 変数を定義
 
@@ -170,7 +170,7 @@
 					const loader = new GLTFLoader();
 
 					loader.load(
-						'cube_small.glb',
+						'cube_medium.glb',
 						function (gltf) {
 							const model = gltf.scene;
 							const position = new THREE.Vector3();
